--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/node": "^22.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sequelizer": "^1.1.4",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
